# Mesh-Agent

./: README.md  depen.sh  main.dockerfile
.github/workflows/: docker-image.yml
DotDB/: README.md  pyproject.toml  shell.nix
DotDB/dotdb/: main.py
DotDB/tests/: test_data.pkl  test_db.py
LineRun/: README.md  pyproject.toml  shell.nix
LineRun/linerun/: main.py
LineRun/tests/: test_main.py
PlaneMCP/src/planemcp/: main.py
src/: agent.py  main.py
src/templates/: chat.html  config.html  editor.html  index.html  terminal.html  workspace.html
