[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotdb"
version = "0.1.0"
description = "A simple python module named dotdb"
authors = [
    {name = "dev", email = "dev@example.com"}
]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "numpy"
]
